--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "submodule-version",
-  "description": "Git submodule versioning tool",
-  "version": "1.0.2",
+  "description": "Git <S>ubmodule <V>ersioning tool",
+  "version": "1.1.0",
   "bin": {
-    "sw": "index.js"
+    "sv": "index.js"
   },
   "scripts": {
     "lint": "npx eslint"
